--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "reset-css": "^5.0.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
