--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.16.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.12.10"
   }
 }
