--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    // "start": "json-server --watch db.json --port 9999"
+    "start": "ts-node src/index.ts"
   },
   "author": "Shepelev Evgeniy <shepelev.ep@yandex.ru>",
   "license": "ISC",
@@ -19,6 +18,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.10",
     "socket.io": "^4.1.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
 }
