--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "json-server": "^0.16.3"
   },
   "dependencies": {
+    "@types/mongoose": "^5.10.5",
     "@types/node": "^15.3.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
