--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.3.1",
+    "@types/validator": "^13.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
