--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/lodash": "^4.14.170",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.3.1",
     "@types/validator": "^13.1.3",
