--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "files": ["./src/middlewares/middlewares.d.ts"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
