--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/lodash": "^4.14.170",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.3.1",
+    "@types/passport": "^1.0.6",
     "@types/validator": "^13.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
