--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^5.10.5",
     "@types/node": "^15.3.1",
     "@types/passport": "^1.0.6",
+    "@types/socket.io": "^3.0.2",
     "@types/validator": "^13.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
