--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "typeRoots": ["../node_modules/@types", "./src/@types"],
+    "typeRoots": ["../node_modules/@types", "./src/@types/createRouters"],
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Basic Options */
