--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.10",
+    "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
