--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.2.6",
+    "cloudinary": "^1.27.1",
     "css-loader": "4.3.0",
     "date-fns": "^2.17.0",
     "dotenv": "8.2.0",
