modifed env file

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ NODE_ENV=development
 PORT=3003
 JWT_SECRET=bEUCHpOQyKrDqbqKjzX7
 JWT_NAX_AGE="7 days"
+
+config.cloudinary.name,
+config.cloudinary.api_key,
+config.cloudinary.api_secret,
