--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,6 @@ PORT=3003
 JWT_SECRET=bEUCHpOQyKrDqbqKjzX7
 JWT_NAX_AGE="7 days"
 
-config.cloudinary.name,
+CLOUDINARY_NAME=dtcgsw3qy
 config.cloudinary.api_key,
 config.cloudinary.api_secret,
