--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@ JWT_SECRET=bEUCHpOQyKrDqbqKjzX7
 JWT_NAX_AGE="7 days"
 
 CLOUDINARY_NAME=dtcgsw3qy
-config.cloudinary.api_key,
+CLOUDINARY_API_KEY=732396786836346
 config.cloudinary.api_secret,
