modifed env file

--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ JWT_NAX_AGE="7 days"
 
 CLOUDINARY_NAME=dtcgsw3qy
 CLOUDINARY_API_KEY=732396786836346
-config.cloudinary.api_secret,
+CLOUDINARY_API_SECRET=VZLhmoN-6fjlEsAv-XN8u8vhY3s
