--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ PORT=3003
 JWT_SECRET=bEUCHpOQyKrDqbqKjzX7
 JWT_NAX_AGE="7 days"
 
+; зарегаться в чтобы получить свои данные: 
 CLOUDINARY_NAME=dtcgsw3qy
 CLOUDINARY_API_KEY=732396786836346
 CLOUDINARY_API_SECRET=VZLhmoN-6fjlEsAv-XN8u8vhY3s
