--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.170",
     "@types/mongoose": "^5.10.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "^15.3.1",
     "@types/passport": "^1.0.6",
     "@types/socket.io": "^3.0.2",
