intsall baber async

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -167,5 +167,7 @@
       "react-app"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.16.0"
+  }
 }
