--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["env"],
-  "plugins": ["syntax-async-functions", "transform-async-to-generator"]
+  "plugins": ["@babel/plugin-transform-async-to-generator"]
 }
