--- a/frontend/package.json
+++ b/frontend/package.json
@@ -165,6 +165,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-async-to-generator"
     ]
   },
   "devDependencies": {
